--- a/infrastructure/policies/us-west-2/rules.yaml
+++ b/infrastructure/policies/us-west-2/rules.yaml
@@ -1,87 +1,85 @@
-request_id: "req-20240428-xyz"
+request_id: req-20240428-xyz
+submitted_by: jeffreywoods@example.com
+submitted_at: 2024-04-28T14:00:00Z
 
 overall_business_justification: >
-  "Enable management connectivity for testing palo alto providers."
+  Enable management connectivity for testing palo alto providers. 
 
 requests:
   - business_justification: >
-      "Allow UI access from home."
+      Allow UI access from home. 
     source:
-      account_id: ""
-      vpc_id: ""
-      region: ""
+      account_id: 
+      vpc_id: 
+      region: 
       security_group_ids:
-      - 
-      ips: ["$HOME_IP"]
+      ips: [$HOME_IP]
     destination:
-      account_id: "$TEST_ACCOUNT"
-      vpc_id: "$TEST_VPC"
-      region: us-west-2
+      account_id: $TEST_ACCOUNT
+      vpc_id: $TEST_VPC
+      region: "us-west-2"
       security_group_ids:
-      -  sg-0b5d6e2811145808d
+      - sg-0b5d6e2811145808d
       ips: []
     protocol: tcp
     port: 443
     appid: ssl
-    url:  ""
+    url:  
 
   - business_justification: >
-      "Allow SSH access from home." 
+      Allow SSH access from home. 
     source:
-      account_id: ""
-      vpc_id: ""
-      region: ""
+      account_id: 
+      vpc_id: 
+      region: 
       security_group_ids:
-      -  
-      ips: ["$HOME_IP"]
+      ips: [$HOME_IP]
     destination:
-      account_id: "$TEST_ACCOUNT"
-      vpc_id: "$TEST_VPC"
-      region: us-west-2
+      account_id: $TEST_ACCOUNT
+      vpc_id: $TEST_VPC
+      region: "us-west-2"
       security_group_ids:
-      -  sg-0b5d6e2811145808d
+      - sg-0b5d6e2811145808d
       ips: []
     protocol: tcp
     port: 22
     appid: ssl
-    url: ""
+    url:  
 
   - business_justification: >
-      "Allow ICMP access from home."
+      Allow ICMP access from home. 
     source:
       account_id: 
       vpc_id: 
       region: 
       security_group_ids:
-      - 
-      ips: ["$HOME_IP"]
+      ips: [$HOME_IP]
     destination:
-      account_id: "$TEST_ACCOUNT"
-      vpc_id: "$TEST_VPC"
-      region: us-west-2
+      account_id: $TEST_ACCOUNT
+      vpc_id: $TEST_VPC
+      region: "us-west-2"
       security_group_ids:
-      -  sg-0b5d6e2811145808d
+      - sg-0b5d6e2811145808d
       ips: []
     protocol: any
     port: any
     appid: ssl
-    url:  ""
+    url:  
 
   - business_justification: >
-      "Allow egress access from palo."
+      Allow egress access from palo. 
     source:
-      account_id: "$TEST_ACCOUNT"
-      vpc_id: "$TEST_VPC"
-      region: us-west-2
+      account_id: $TEST_ACCOUNT
+      vpc_id: $TEST_VPC
+      region: "us-west-2"
       security_group_ids:
-      -  sg-0b5d6e2811145808d
+      - sg-0b5d6e2811145808d
       ips: []
     destination:
       account_id: 
       vpc_id: 
       region: 
       security_group_ids:
-      -  
       ips: ["0.0.0.0/0"]
     protocol: any
     port: any
@@ -89,20 +87,20 @@ requests:
     url:  
   
   - business_justification: >
-      "EC2 instance needs HTTPS access to thirdparty endpoint."
+      EC2 instance needs HTTPS access to thirdparty endpoint.
     source:
       account_id: 
       vpc_id: 
       region: 
       security_group_ids:
-      -  sg-0b7029dc87dbcb848
+        - "sg-0b7029dc87dbcb848"
       ips: ["192.168.1.18/32"]
     destination:
       account_id: 
       vpc_id: 
       region: 
       security_group_ids:
-      -  sg-01057cb19af0373d7
+        - "sg-01057cb19af0373d7"
       ips: ["100.64.0.198/32"]
     protocol: tcp
     port: 443
@@ -113,23 +111,142 @@ requests:
     enable_palo_inspection: true
 
   - business_justification: >
-      "EC2 needs to connect to aws service vpc-endpoints via PrivateLink."
+      EC2 needs to connect to aws service vpc-endpoints via PrivateLink.
     source:
       account_id: 
       vpc_id: 
       region: 
       security_group_ids:
-      -  sg-0b7029dc87dbcb848
+        - "sg-0b7029dc87dbcb848"
       ips: []
     destination:
-      account_id: 
+      account_id:
       vpc_id: 
-      region: 
+      region:
       security_group_ids:
-      -  sg-0dfca87f31291ec64
+        - "sg-0dfca87f31291ec64"
       ips: []
     protocol: tcp
     port: 443
     appid: ssl
     host: ec2.us-west-2.amazonaws.com
 
+  # From issue #86
+  
+  - business_justification: >
+      Allow HTTPS access from EC2 to DooDooDog
+    source:
+      account_id: 
+      vpc_id: 
+      region: 
+      security_group_ids:
+        - sg-0b7029dc87dbcb848
+      ips: ["192.168.1.18/32"]
+    destination:
+      account_id: 
+      vpc_id: 
+      region: "us-west-2"
+      security_group_ids:
+        - sg-0b79868485b793c17
+      ips: ["100.64.0.199/32"]
+    protocol: tcp
+    port: 443
+    appid: ssl
+    url:  
+    enable_palo_inspection: true
+    thirdPartyID: 6969
+    thirdPartyName: DooDooDog
+    region: us-west-2
+
+  # From issue #90
+  
+  - business_justification: >
+      Allow HTTPS access from EC2 to realoksi vpc-endpoint
+    source:
+      security_group_ids:
+        - sg-0b7029dc87dbcb848
+      ips: ["192.168.1.18/32"]
+    destination:
+      security_group_ids:
+        - sg-04666e610aa2d5bb0
+      ips: ["100.64.0.170/32"]
+    protocol: tcp
+    port: 443
+    appid: ssl
+    enable_palo_inspection: true
+    thirdPartyID: 68594
+    thirdPartyName: realoksi
+    region: us-west-2
+
+  # From issue #94
+  
+  - business_justification: >
+      Allow UI Access from Alternate Source subnet
+    source:
+      account_id: 
+      vpc_id: 
+      region: 
+      security_group_ids:
+      ips: [$ALTERNATE_SOURCE]
+    destination:
+      account_id: 12345567
+      vpc_id: vpc-0c9a555406867d5da
+      region: "us-west-2"
+      security_group_ids:
+        - sg-0b5d6e2811145808d 
+      ips: []
+    protocol: tcp
+    port: 443
+    appid: ssl
+    url:  
+
+  # From issue #98
+  
+  - business_justification: >
+      Allow Connectivity to maxbarb for hair-styling ai agent requirements. 
+    source:
+      account_id: 
+      vpc_id: 
+      region: 
+      security_group_ids:
+      - sg-0b7029dc87dbcb848
+      ips: ["100.64.1.0/23"]
+    destination:
+      account_id: 
+      vpc_id: vpc-0c9a555406867d5da
+      region: "us-west-2"
+      security_group_ids:
+      - sg-0ddaccbfa68e04f44
+      ips: ["100.64.2.55/32"]
+    protocol: tcp
+    port: 443
+    appid: ssl
+    url:  
+    enable_palo_inspection: true
+    thirdPartyID:
+    thirdPartyName: MaxBarb
+    region: us-west-2
+  - business_justification: >
+      Allow Connectivity to maxbarb for hair-styling ai agent requirements. 
+    source:
+      account_id: 
+      vpc_id: 
+      region: 
+      security_group_ids:
+      - sg-0ddaccbfa68e04f44
+      ips: []
+    destination:
+      account_id: 
+      vpc_id: vpc-0c9a555406867d5da
+      region: "us-west-2"
+      security_group_ids:
+      - sg-0ddaccbfa68e04f44
+      ips: []
+    protocol: tcp
+    port: 8443
+    appid: ssl
+    url:  
+    enable_palo_inspection: false
+    thirdPartyID:
+    thirdPartyName: MaxBarb
+    region: us-west-2
