--- a/infrastructure/policies/us-west-2/sgs.yaml
+++ b/infrastructure/policies/us-west-2/sgs.yaml
@@ -1,20 +1,59 @@
-request_id: "req-20240428-xyz"
+request_id: req-20240428-xyz
+submitted_by: jeffreywoods@example.com
+submitted_at: 2024-04-28T14:00:00Z
 
 overall_business_justification: >
-  "Create security-groups for third-party use-cases"
+  Create security-groups for third-party use-cases
 
 requests:
   - business_justification: >
-      "Create security-group for datadog privatelink in us-west-2"
+      Create security-group for datadog privatelink in us-west-2
     thirdpartyName: Datadog
     thirdpartyId: 1234567
     accountId: 6666666
     vpcId: vpc-0c9a555406867d5da
     region: us-west-2
   - business_justification: >
-      "Create security-group for mongoDB privatelink in us-west-2"
+      Create security-group for mongoDB privatelink in us-west-2
     thirdpartyName: MongoDB
     thirdpartyId: 456748
+    accountId: 6666666
+    vpcId: vpc-0c9a555406867d5da
+    region: us-west-2
+
+  # From issue #76
+  
+  - business_justification: >
+      Create SG for Doodoodog VPC endpoint
+    thirdpartyName: Doodoodog
+    thirdpartyId: 6969
+    accountId: 6666666
+    vpcId: vpc-0c9a555406867d5da
+    region: us-west-2
+  - business_justification: >
+      Create SG for Mongloid VPC endpoint
+    thirdpartyName: Mongloid
+    thirdpartyId: 666
+    accountId: 6666666
+    vpcId: vpc-0c9a555406867d5da
+    region: us-west-2
+
+  # From issue #88
+  
+  - business_justification: >
+      Create SG for realoksis ice cream truck company
+    thirdpartyName: realoksi
+    thirdpartyId: 68594
+    accountId: 6666666
+    vpcId: vpc-0c9a555406867d5da
+    region: us-west-2
+
+  # From issue #96
+  
+  - business_justification: >
+      Create SG for Thirdparty MaxBarb 
+    thirdpartyName: MaxBarb
+    thirdpartyId: 474833
     accountId: 6666666
     vpcId: vpc-0c9a555406867d5da
     region: us-west-2
