--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -20,6 +20,7 @@ env:
 
 jobs:
   terraform-apply:
+    runs-on: ubuntu-latest
     container:
       image: ghcr.io/drewpypro/kube-aws-istio:latest
     defaults:
@@ -41,6 +42,7 @@ jobs:
       - name: Inject IPs into policy YAML
         run: |
           sed -i "s|\\\$HOME_IP|${{ secrets.HOME_IP }}|g" policies/us-west-2/rules.yaml
+          sed -i "s|\\\$ALTERNATE_SOURCE|${{ secrets.ALTERNATE_SOURCE }}|g" policies/us-west-2/rules.yaml
           IP=$(curl -s ifconfig.me)
           echo "Runner public IP: $IP"
           aws ec2 authorize-security-group-ingress \
